<?xml version="1.0"?>
<package format="2">
  <name>lab</name>
  <version>0.1.0</version>
  <description>Lab</description>
  <maintainer email="guillaumejchauveau.ops.gecu@outlook.com">Guillaume Chauveau</maintainer>
  <license>MIT</license>
  <author email="guillaumejchauveau.ops.gecu@outlook.com">Guillaume Chauveau</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <build_depend>roslint</build_depend>
</package>
